--- a/certification.css
+++ b/certification.css
@@ -1,61 +1,13 @@
-body{
-    background-color:rgb(90, 88, 88);
-}
-
-
-#contianer{
-    text-align: center;
-    display: block;
-    border: solid 5px black;
-    margin: 2rem auto;
-    width: 70%;
-    background-color: white;
-    border-radius: 10px;
-}
-h1{
-    background-color: rgb(190, 145, 62);
-    color: white;
-}
-#section{
-    margin: 2rem auto;
-}
-img{
-    margin: 3rem auto;
-    height: 50vh;
-    width: 54vw;
-}
-#part1{
-    /* border: solid 2px black; */
-   
-    margin: auto;
-}
-#part2{
-    /* border: solid 2px black; */
-    width: 70%;
-    margin: auto;
-}
-#part3{
-    /* border: solid 2px black; */
-    width: 70%;
-    margin: auto;
-}
-
-
-p{
-    border: solid 5px rgb(224, 165, 54);
-    border-radius: 20px;
-}
 #nav{
     display: grid;
    grid-template-columns: 2fr 2fr 2fr;
    /* margin: 2rem auto; */
    grid-gap: 2rem;
-   border: 3px solid #dd7732;
+   border: 2px solid red;
    align-items: center;
    justify-items: center;
    font-size: 2rem;
 }
-
 .logo img{
     display: block;
     max-height: 10%;
@@ -102,3 +54,19 @@ p{
     /* margin: auto; */
     
 }
+footer{
+    margin-top: 5fr;
+    border: solid 2px black;
+    /* background-color: black; */
+    color: #dd7732;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    text-align: center;
+    justify-content: center;
+  
+  }
+  #footer{
+  margin-top: 5rem;
+  height: 10%;
+  
+  }
